[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "focus-scrub"
version = "0.1.0"
description = "Command-line FOCUS file scrub tool with pluggable per-column handlers."
authors = []
readme = "README.md"
packages = [{ include = "focus_scrub", from = "focus_scrub" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.2.0"
pyarrow = ">=15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.9.0"
mypy = ">=1.14.0"
pre-commit = ">=4.0.0"

[tool.poetry.scripts]
focus-scrub = "focus_scrub.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["call-overload", "arg-type", "attr-defined", "operator"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
